[gd_scene load_steps=9 format=4 uid="uid://sx7evnve2ry4"]

[ext_resource type="Script" path="res://Player/BodyParts/body_part.gd" id="1_7hudb"]
[ext_resource type="Script" path="res://States/finite_state_machine.gd" id="2_q0euu"]
[ext_resource type="Script" path="res://States/BodyParts/body_part_preview.gd" id="3_i3fb8"]
[ext_resource type="Script" path="res://States/BodyParts/body_part_idle.gd" id="4_elgt0"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_xjy65"]

[sub_resource type="ArrayMesh" id="ArrayMesh_hl3hu"]
_surfaces = [{
"aabb": AABB(-0.884346, -0.840184, -0.357602, 2.12561, 1.47191, 0.715203),
"format": 34359742465,
"index_count": 234,
"index_data": PackedByteArray("AAADAAIAAAABAAMABQAHAAYABQAEAAcAAQAJAAMAAQAIAAkABQAOAAQABQAPAA4AAwAEAAIAAwAHAAQAAAAGAAEAAAAFAAYABgAIAAEABgAKAAgAAwALAAcAAwAJAAsABwAKAAYABwALAAoADAAPAA0ADAAOAA8AAAAXAA0AAAAVABcABAAMAAIABAAOAAwAAAAPAAUAAAANAA8AEAATABIAEAARABMAFgAYABQAFgAaABgAAgAVAAAAAgAUABUADQAWAAwADQAXABYADAAUAAIADAAWABQAGgAcABgAGgAeABwAFwAaABYAFwAbABoAFQAbABcAFQAZABsAFAAZABUAFAAYABkAHQAjAB8AHQAhACMAGwAeABoAGwAfAB4AGQAfABsAGQAdAB8AGAAdABkAGAAcAB0AIAAjACEAIAAiACMAHAAhAB0AHAAgACEAHgAgABwAHgAiACAAHwAiAB4AHwAjACIAJgAoACQAJgAqACgAEgAmABAAEAAmACQAEwAmABIAEwAnACYAEQAlABMAEwAlACcAEAAlABEAEAAkACUAKAArACkAKAAqACsAJwAqACYAJwArACoAJQArACcAJQApACsAJAApACUAJAAoACkA"),
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 44,
"vertex_data": PackedByteArray("8I5OvkdKNL6NF7c+8I5OPgAAAADwjk4+8I5OvkdKNL6NF7e+8I5OPgAAAADwjk6+8I5Ovsm4IT+NF7e+8I5Ovsm4IT+NF7c+8I5OPm9M6T7wjk4+8I5OPm9M6T7wjk6+ngOPPwAAAADwjk4+ngOPPwAAAADwjk6+qQKPP29M6T6ElyI9qQKPP29M6T6ElyK9f2Riv0dKNL6NF7e+f2Riv0dKNL6NF7c+Es41v7020D6NF7e+Es41v7020D6NF7c+OwGPPwAAAADwjk4+OwGPPwAAAADwjk6+MQKPP29M6T6ElyI9MQKPP29M6T6ElyK9W3PRvpVlOL5YtQ++W3PRvpVlOL5YtQ8+W9hHv2Rsib5YtQ++W9hHv2Rsib5YtQ8+W3PRvsLoxL5YtQ++W3PRvsLoxL5YtQ8+jk4tv8LoxL5YtQ++jk4tv8LoxL5YtQ8+KHubvlG+y74qZoC+KHubvlG+y74qZoA+p0pIv1G+y74qZoC+p0pIv1G+y74qZoA+KHubvlAWV78qZoC+KHubvlAWV78qZoA+p0pIv1AWV78qZoC+p0pIv1AWV78qZoA+UmOQPznA8z3YTcU9UmOQPznA8z3YTcW9UmOQP2FcrD7YTcU9UmOQP2FcrD7YTcW9z+GePznA8z3YTcU9z+GePznA8z3YTcW9z+GeP2FcrD7YTcU9z+GeP2FcrD7YTcW9")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_xc8y6"]
resource_name = "body_part_2_Plane"
_surfaces = [{
"aabb": AABB(-0.884346, -0.840184, -0.357602, 2.12561, 1.47191, 0.715203),
"attribute_data": PackedByteArray("AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAgD8AAIA/AACAPwAAgD8AAIA/AACAPwAAgD8AAIA/AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAgD8AAIA/AACAPwAAgD8AAIA/AACAPwAAgD8AAIA/AACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AACAPwAAgD8AAIA/AACAPwAAAAAAAIA/AAAAAAAAgD8AAIA/AACAPwAAgD8AAIA/AAAAAAAAgD8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAgD8AAIA/AACAPwAAgD8AAIA/AACAPwAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAIA/AACAPwAAgD8AAIA/AACAPwAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAgD8AAIA/AACAPwAAgD8AAIA/AACAPwAAgD8AAIA/AACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AACAPwAAgD8AAIA/AACAPwAAgD8AAIA/AACAPwAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAgD8AAIA/AACAPwAAgD8AAIA/AACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAgD8AAIA/AACAPwAAgD8AAIA/AACAPwAAAAAAAIA/AAAAAAAAgD8AAAAA"),
"format": 34359742487,
"index_count": 234,
"index_data": PackedByteArray("BAARAA0ABAAIABEAGAAhAB0AGAAUACEABQAkAA4ABQAiACQAGQAzABUAGQA2ADMAEAATAAwAEAAgABMAAwAcAAcAAwAXABwAGwAjAAYAGwAnACMADwApAB8ADwAlACkAHgAmABoAHgAoACYALQA3ADEALQA0ADcAAgBRAC8AAgBKAFEAEgAqAAkAEgAyACoAAAA1ABYAAAAuADUAOgBDAEAAOgA9AEMATABUAEQATABcAFQACgBJAAEACgBFAEkAMABOACwAMABSAE4AKwBGAAsAKwBNAEYAXQBlAFUAXQBtAGUAUwBfAE8AUwBjAF8ASABgAFAASABYAGAARwBbAEsARwBXAFsAaAB9AHAAaAB3AH0AYgBuAF4AYgByAG4AWQBxAGEAWQBpAHEAVgBqAFoAVgBmAGoAdQB+AHgAdQB7AH4AZwB5AGsAZwB2AHkAbAB0AGQAbAB6AHQAcwB8AG8AcwB/AHwAiACQAIAAiACWAJAAPgCKADgAOACKAIIAQgCLAD8AQgCPAIsAOwCGAEEAQQCGAI4AOQCHADwAOQCDAIcAkgCbAJUAkgCYAJsAjQCXAIkAjQCaAJcAhACZAIwAhACTAJkAgQCUAIUAgQCRAJQA"),
"material": SubResource("StandardMaterial3D_xjy65"),
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 156,
"vertex_data": PackedByteArray("8I5OvkdKNL6NF7c+8I5OvkdKNL6NF7c+8I5OvkdKNL6NF7c+8I5OvkdKNL6NF7c+8I5OvkdKNL6NF7c+8I5OPgAAAADwjk4+8I5OPgAAAADwjk4+8I5OPgAAAADwjk4+8I5OPgAAAADwjk4+8I5OvkdKNL6NF7e+8I5OvkdKNL6NF7e+8I5OvkdKNL6NF7e+8I5OvkdKNL6NF7e+8I5OvkdKNL6NF7e+8I5OPgAAAADwjk6+8I5OPgAAAADwjk6+8I5OPgAAAADwjk6+8I5OPgAAAADwjk6+8I5Ovsm4IT+NF7e+8I5Ovsm4IT+NF7e+8I5Ovsm4IT+NF7e+8I5Ovsm4IT+NF7e+8I5Ovsm4IT+NF7c+8I5Ovsm4IT+NF7c+8I5Ovsm4IT+NF7c+8I5Ovsm4IT+NF7c+8I5OPm9M6T7wjk4+8I5OPm9M6T7wjk4+8I5OPm9M6T7wjk4+8I5OPm9M6T7wjk4+8I5OPm9M6T7wjk6+8I5OPm9M6T7wjk6+8I5OPm9M6T7wjk6+8I5OPm9M6T7wjk6+ngOPPwAAAADwjk4+ngOPPwAAAADwjk4+ngOPPwAAAADwjk6+ngOPPwAAAADwjk6+qQKPP29M6T6ElyI9qQKPP29M6T6ElyI9qQKPP29M6T6ElyK9qQKPP29M6T6ElyK9f2Riv0dKNL6NF7e+f2Riv0dKNL6NF7e+f2Riv0dKNL6NF7e+f2Riv0dKNL6NF7e+f2Riv0dKNL6NF7c+f2Riv0dKNL6NF7c+f2Riv0dKNL6NF7c+f2Riv0dKNL6NF7c+Es41v7020D6NF7e+Es41v7020D6NF7e+Es41v7020D6NF7e+Es41v7020D6NF7c+Es41v7020D6NF7c+Es41v7020D6NF7c+OwGPPwAAAADwjk4+OwGPPwAAAADwjk4+OwGPPwAAAADwjk4+OwGPPwAAAADwjk6+OwGPPwAAAADwjk6+OwGPPwAAAADwjk6+MQKPP29M6T6ElyI9MQKPP29M6T6ElyI9MQKPP29M6T6ElyI9MQKPP29M6T6ElyK9MQKPP29M6T6ElyK9MQKPP29M6T6ElyK9W3PRvpVlOL5YtQ++W3PRvpVlOL5YtQ++W3PRvpVlOL5YtQ++W3PRvpVlOL5YtQ++W3PRvpVlOL5YtQ8+W3PRvpVlOL5YtQ8+W3PRvpVlOL5YtQ8+W3PRvpVlOL5YtQ8+W9hHv2Rsib5YtQ++W9hHv2Rsib5YtQ++W9hHv2Rsib5YtQ++W9hHv2Rsib5YtQ++W9hHv2Rsib5YtQ8+W9hHv2Rsib5YtQ8+W9hHv2Rsib5YtQ8+W9hHv2Rsib5YtQ8+W3PRvsLoxL5YtQ++W3PRvsLoxL5YtQ++W3PRvsLoxL5YtQ++W3PRvsLoxL5YtQ++W3PRvsLoxL5YtQ8+W3PRvsLoxL5YtQ8+W3PRvsLoxL5YtQ8+W3PRvsLoxL5YtQ8+jk4tv8LoxL5YtQ++jk4tv8LoxL5YtQ++jk4tv8LoxL5YtQ++jk4tv8LoxL5YtQ++jk4tv8LoxL5YtQ8+jk4tv8LoxL5YtQ8+jk4tv8LoxL5YtQ8+jk4tv8LoxL5YtQ8+KHubvlG+y74qZoC+KHubvlG+y74qZoC+KHubvlG+y74qZoC+KHubvlG+y74qZoC+KHubvlG+y74qZoA+KHubvlG+y74qZoA+KHubvlG+y74qZoA+KHubvlG+y74qZoA+p0pIv1G+y74qZoC+p0pIv1G+y74qZoC+p0pIv1G+y74qZoC+p0pIv1G+y74qZoC+p0pIv1G+y74qZoA+p0pIv1G+y74qZoA+p0pIv1G+y74qZoA+p0pIv1G+y74qZoA+KHubvlAWV78qZoC+KHubvlAWV78qZoC+KHubvlAWV78qZoC+KHubvlAWV78qZoA+KHubvlAWV78qZoA+KHubvlAWV78qZoA+p0pIv1AWV78qZoC+p0pIv1AWV78qZoC+p0pIv1AWV78qZoC+p0pIv1AWV78qZoA+p0pIv1AWV78qZoA+p0pIv1AWV78qZoA+UmOQPznA8z3YTcU9UmOQPznA8z3YTcU9UmOQPznA8z3YTcU9UmOQPznA8z3YTcU9UmOQPznA8z3YTcW9UmOQPznA8z3YTcW9UmOQPznA8z3YTcW9UmOQPznA8z3YTcW9UmOQP2FcrD7YTcU9UmOQP2FcrD7YTcU9UmOQP2FcrD7YTcU9UmOQP2FcrD7YTcU9UmOQP2FcrD7YTcW9UmOQP2FcrD7YTcW9UmOQP2FcrD7YTcW9UmOQP2FcrD7YTcW9z+GePznA8z3YTcU9z+GePznA8z3YTcU9z+GePznA8z3YTcU9z+GePznA8z3YTcW9z+GePznA8z3YTcW9z+GePznA8z3YTcW9z+GeP2FcrD7YTcU9z+GeP2FcrD7YTcU9z+GeP2FcrD7YTcU9z+GeP2FcrD7YTcW9z+GeP2FcrD7YTcW9z+GeP2FcrD7YTcW9/3//f////z9sgmwC////v1iIbhz///8/q6P/f////z/jpuMmJNf7LP9/AAD///+/8Yj4kf///z+ro/9/////P+Om4yZZ4Rwj/////////79sgmwC////v26cWAj///+///9T3P///7/jpuMmN8asMP9/AAD///+/Be4M9////7///1Pc////v+Om4yZn0gQu/////////7///1Pc////v+OmG9k3xqywuFi42P///7//f/9/////P6uj/3////8/46Yb2STX+qy4WLjY////v/9///////+/8Yj4kf///z+ro/9/////P+OmG9lZ4Ruj/3///////78F7gz3////v///U9z///+/46Yb2WfSA67/fwAA////v/GI+JH///8//38AAP///78F7gz3////v/9///////+/8Yj4kf///z//f///////vwXuDPf///+//////////79unFgI////v7VDSjz///+/dB10nf///7//f/9/////P1iIbhz///8/tUNKPP///790HXSd////v/////////+/uFi42P///790HXSd////v/9//3////8/uFi42P///790HXSd////v5zSy4j///8/WPVYdf///78DAAKA////vzL3Ya3///+/WPVYdf///78DAAKA////v5zSy4j///8/XfWgiv///78DAAKA////vzL3Ya3///+/XfWgiv///78DAAKA////v/////////+/bIJsAv///79unFgI////v////3////+//3//f////z9sgmwC////v1iIbhz///8/////f////7//////////v26cWAj///+/tUNKPP///79aPKRD////v/9//3////8/WIhuHP///z+1Q0o8////v1o8pEP///+//////////7/Njf//////v2GOnPH///+/////f////7//f/9/////P/9/MfL///8/YY6c8f///7////9/////v/////////+/zY3//////7+dcZzx////v1o8pEP///+//3//f////z//fzHy////P51xnPH///+/WjykQ////7//////////v82N//////+/YY6c8f///7////9/////v/9//3////8//38x8v///z9hjpzx////v////3////+//////////7/Njf//////v51xnPH///+/AAD/f////7//f/9/////P/9/MfL///8/nXGc8f///78AAP9/////v/////////+//38AAP///7////9/////v/9//3////8//38AAP///7////9/////v/////////+//38AAP///78AAP9/////v/9//3////8//38AAP///78AAP9/////v/9//3////8//38AAP///7+c0suI////P1j1WHX///+//////////7//fwAA////vzL3Ya3///+/WPVYdf///7//f/9/////P/9///////+/nNLLiP///z9d9aCK////v/////////+//3///////78y92Gt////v131oIr///+//3//f////z//fwAA////v////3////+//////////7//fwAA////v////3////+//3//f////z//f///////v////3////+//////////7//f///////v////3////+/")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_hl3hu")

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_34vnu"]
data = PackedVector3Array(-0.2017, -0.1761, 0.3576, 0.2017, 0, -0.2017, -0.2017, -0.1761, -0.3576, -0.2017, -0.1761, 0.3576, 0.2017, 0, 0.2017, 0.2017, 0, -0.2017, -0.2017, 0.6317, 0.3576, 0.2017, 0.4557, -0.2017, 0.2017, 0.4557, 0.2017, -0.2017, 0.6317, 0.3576, -0.2017, 0.6317, -0.3576, 0.2017, 0.4557, -0.2017, 0.2017, 0, 0.2017, 1.1173, 0, -0.2017, 0.2017, 0, -0.2017, 0.2017, 0, 0.2017, 1.1173, 0, 0.2017, 1.1173, 0, -0.2017, -0.2017, 0.6317, 0.3576, -0.7102, 0.4067, -0.3576, -0.2017, 0.6317, -0.3576, -0.2017, 0.6317, 0.3576, -0.7102, 0.4067, 0.3576, -0.7102, 0.4067, -0.3576, 0.2017, 0, -0.2017, -0.2017, 0.6317, -0.3576, -0.2017, -0.1761, -0.3576, 0.2017, 0, -0.2017, 0.2017, 0.4557, -0.2017, -0.2017, 0.6317, -0.3576, -0.2017, -0.1761, 0.3576, 0.2017, 0.4557, 0.2017, 0.2017, 0, 0.2017, -0.2017, -0.1761, 0.3576, -0.2017, 0.6317, 0.3576, 0.2017, 0.4557, 0.2017, 0.2017, 0.4557, 0.2017, 1.1173, 0, 0.2017, 0.2017, 0, 0.2017, 0.2017, 0.4557, 0.2017, 1.1173, 0.4557, 0.0397, 1.1173, 0, 0.2017, 0.2017, 0, -0.2017, 1.1173, 0.4557, -0.0397, 0.2017, 0.4557, -0.2017, 0.2017, 0, -0.2017, 1.1173, 0, -0.2017, 1.1173, 0.4557, -0.0397, 0.2017, 0.4557, -0.2017, 1.1173, 0.4557, 0.0397, 0.2017, 0.4557, 0.2017, 0.2017, 0.4557, -0.2017, 1.1173, 0.4557, -0.0397, 1.1173, 0.4557, 0.0397, -0.8843, -0.1761, -0.3576, -0.7102, 0.4067, 0.3576, -0.8843, -0.1761, 0.3576, -0.8843, -0.1761, -0.3576, -0.7102, 0.4067, -0.3576, -0.7102, 0.4067, 0.3576, -0.2017, -0.1761, 0.3576, -0.7806, -0.2684, 0.1403, -0.8843, -0.1761, 0.3576, -0.2017, -0.1761, 0.3576, -0.4091, -0.1801, 0.1403, -0.7806, -0.2684, 0.1403, -0.2017, 0.6317, -0.3576, -0.8843, -0.1761, -0.3576, -0.2017, -0.1761, -0.3576, -0.2017, 0.6317, -0.3576, -0.7102, 0.4067, -0.3576, -0.8843, -0.1761, -0.3576, -0.2017, -0.1761, 0.3576, -0.7102, 0.4067, 0.3576, -0.2017, 0.6317, 0.3576, -0.2017, -0.1761, 0.3576, -0.8843, -0.1761, 0.3576, -0.7102, 0.4067, 0.3576, 1.1172, 0, 0.2017, 1.1173, 0.4557, -0.0397, 1.1173, 0.4557, 0.0397, 1.1172, 0, 0.2017, 1.1172, 0, -0.2017, 1.1173, 0.4557, -0.0397, -0.7806, -0.2684, -0.1403, -0.4091, -0.3846, -0.1403, -0.4091, -0.1801, -0.1403, -0.7806, -0.2684, -0.1403, -0.677, -0.3846, -0.1403, -0.4091, -0.3846, -0.1403, -0.2017, -0.1761, -0.3576, -0.4091, -0.1801, 0.1403, -0.2017, -0.1761, 0.3576, -0.2017, -0.1761, -0.3576, -0.4091, -0.1801, -0.1403, -0.4091, -0.1801, 0.1403, -0.8843, -0.1761, 0.3576, -0.7806, -0.2684, -0.1403, -0.8843, -0.1761, -0.3576, -0.8843, -0.1761, 0.3576, -0.7806, -0.2684, 0.1403, -0.7806, -0.2684, -0.1403, -0.8843, -0.1761, -0.3576, -0.4091, -0.1801, -0.1403, -0.2017, -0.1761, -0.3576, -0.8843, -0.1761, -0.3576, -0.7806, -0.2684, -0.1403, -0.4091, -0.1801, -0.1403, -0.677, -0.3846, -0.1403, -0.3037, -0.3979, -0.2508, -0.4091, -0.3846, -0.1403, -0.677, -0.3846, -0.1403, -0.7824, -0.3979, -0.2508, -0.3037, -0.3979, -0.2508, -0.7806, -0.2684, 0.1403, -0.677, -0.3846, -0.1403, -0.7806, -0.2684, -0.1403, -0.7806, -0.2684, 0.1403, -0.677, -0.3846, 0.1403, -0.677, -0.3846, -0.1403, -0.4091, -0.1801, 0.1403, -0.677, -0.3846, 0.1403, -0.7806, -0.2684, 0.1403, -0.4091, -0.1801, 0.1403, -0.4091, -0.3846, 0.1403, -0.677, -0.3846, 0.1403, -0.4091, -0.1801, -0.1403, -0.4091, -0.3846, 0.1403, -0.4091, -0.1801, 0.1403, -0.4091, -0.1801, -0.1403, -0.4091, -0.3846, -0.1403, -0.4091, -0.3846, 0.1403, -0.3037, -0.3979, 0.2508, -0.7824, -0.8402, 0.2508, -0.7824, -0.3979, 0.2508, -0.3037, -0.3979, 0.2508, -0.3037, -0.8402, 0.2508, -0.7824, -0.8402, 0.2508, -0.677, -0.3846, 0.1403, -0.7824, -0.3979, -0.2508, -0.677, -0.3846, -0.1403, -0.677, -0.3846, 0.1403, -0.7824, -0.3979, 0.2508, -0.7824, -0.3979, -0.2508, -0.4091, -0.3846, 0.1403, -0.7824, -0.3979, 0.2508, -0.677, -0.3846, 0.1403, -0.4091, -0.3846, 0.1403, -0.3037, -0.3979, 0.2508, -0.7824, -0.3979, 0.2508, -0.4091, -0.3846, -0.1403, -0.3037, -0.3979, 0.2508, -0.4091, -0.3846, 0.1403, -0.4091, -0.3846, -0.1403, -0.3037, -0.3979, -0.2508, -0.3037, -0.3979, 0.2508, -0.3037, -0.8402, -0.2508, -0.7824, -0.8402, 0.2508, -0.3037, -0.8402, 0.2508, -0.3037, -0.8402, -0.2508, -0.7824, -0.8402, -0.2508, -0.7824, -0.8402, 0.2508, -0.3037, -0.3979, -0.2508, -0.3037, -0.8402, 0.2508, -0.3037, -0.3979, 0.2508, -0.3037, -0.3979, -0.2508, -0.3037, -0.8402, -0.2508, -0.3037, -0.8402, 0.2508, -0.7824, -0.3979, -0.2508, -0.3037, -0.8402, -0.2508, -0.3037, -0.3979, -0.2508, -0.7824, -0.3979, -0.2508, -0.7824, -0.8402, -0.2508, -0.3037, -0.8402, -0.2508, -0.7824, -0.3979, 0.2508, -0.7824, -0.8402, -0.2508, -0.7824, -0.3979, -0.2508, -0.7824, -0.3979, 0.2508, -0.7824, -0.8402, 0.2508, -0.7824, -0.8402, -0.2508, 1.128, 0.3366, 0.0963, 1.2413, 0.119, 0.0963, 1.128, 0.119, 0.0963, 1.128, 0.3366, 0.0963, 1.2413, 0.3366, 0.0963, 1.2413, 0.119, 0.0963, 1.1173, 0.4557, 0.0397, 1.128, 0.3366, 0.0963, 1.1172, 0, 0.2017, 1.1172, 0, 0.2017, 1.128, 0.3366, 0.0963, 1.128, 0.119, 0.0963, 1.1173, 0.4557, -0.0397, 1.128, 0.3366, 0.0963, 1.1173, 0.4557, 0.0397, 1.1173, 0.4557, -0.0397, 1.128, 0.3366, -0.0963, 1.128, 0.3366, 0.0963, 1.1172, 0, -0.2017, 1.128, 0.119, -0.0963, 1.1173, 0.4557, -0.0397, 1.1173, 0.4557, -0.0397, 1.128, 0.119, -0.0963, 1.128, 0.3366, -0.0963, 1.1172, 0, 0.2017, 1.128, 0.119, -0.0963, 1.1172, 0, -0.2017, 1.1172, 0, 0.2017, 1.128, 0.119, 0.0963, 1.128, 0.119, -0.0963, 1.2413, 0.119, 0.0963, 1.2413, 0.3366, -0.0963, 1.2413, 0.119, -0.0963, 1.2413, 0.119, 0.0963, 1.2413, 0.3366, 0.0963, 1.2413, 0.3366, -0.0963, 1.128, 0.3366, -0.0963, 1.2413, 0.3366, 0.0963, 1.128, 0.3366, 0.0963, 1.128, 0.3366, -0.0963, 1.2413, 0.3366, -0.0963, 1.2413, 0.3366, 0.0963, 1.128, 0.119, -0.0963, 1.2413, 0.3366, -0.0963, 1.128, 0.3366, -0.0963, 1.128, 0.119, -0.0963, 1.2413, 0.119, -0.0963, 1.2413, 0.3366, -0.0963, 1.128, 0.119, 0.0963, 1.2413, 0.119, -0.0963, 1.128, 0.119, -0.0963, 1.128, 0.119, 0.0963, 1.2413, 0.119, 0.0963, 1.2413, 0.119, -0.0963)

[node name="body_part_2" type="Node3D"]
script = ExtResource("1_7hudb")

[node name="Plane" type="MeshInstance3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, 0)
mesh = SubResource("ArrayMesh_xc8y6")
skeleton = NodePath("")

[node name="AttachmentPoint" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.226, 1.231)

[node name="StaticBody3D" type="StaticBody3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_34vnu")

[node name="FiniteStateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("2_q0euu")
initial_state = NodePath("BodyPartIdle")

[node name="BodyPartPreview" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("body_part")]
script = ExtResource("3_i3fb8")
body_part = NodePath("../..")

[node name="BodyPartIdle" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("body_part")]
script = ExtResource("4_elgt0")
body_part = NodePath("../..")
